--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Hi
+first_name: Hii
 middle_name: 
 last_name: Name
 email: you@example.com
