--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Hii
+first_name: Effrosyni
 middle_name: 
-last_name: Name
+last_name: Papanastasiou
 email: you@example.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
