--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,31 +2,30 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Effrosyni Papanastasiou
+    - name: Current location
+      value: Paris, France
     - name: Languages
-      value: English, German
+      value: English, Frenc, Greek (mother)
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: PhD (in process)
+      institution: Sorbonne University, Paris, France
+      year: 2020 -now
       description:
-        - Description 1.
-        - Description 2.
+        - Part of the MLIA team of the ISIR laboratory
         - title: Description 3.
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+    - title: Diploma in Electrical and Computer Engineering
+      institution: National Technical University of Athens, Greece
+      year: 2019
       description:
-        - Description 1.
-        - Description 2.
+        - Thesis: Tensor Factorization with Label Information for Fake News Detection
+        - Specializations: Computer Systems, Computer Software, Computer Networks, Biotechnology
 
 - title: Experience
   type: time_table
