--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -6,7 +6,7 @@
     - name: Current location
       value: Paris, France
     - name: Languages
-      value: English, Frenc, Greek (mother)
+      value: English, French, Greek (mother)
 
 - title: Education
   type: time_table
@@ -24,41 +24,27 @@
       institution: National Technical University of Athens, Greece
       year: 2019
       description:
-        - Thesis: Tensor Factorization with Label Information for Fake News Detection
-        - Specializations: Computer Systems, Computer Software, Computer Networks, Biotechnology
-
-- title: Experience
+        - Thesis :Tensor Factorization with Label Information for Fake News Detection
+        - Specializations :Computer Systems, Computer Software, Computer Networks, Biotechnology
+    - title:     Minor in Visual Arts
+      institution:     Deree, the American College of Greece, Athens, Greece
+      year: 2018
+      description:
+        - explored performance arts, video art and history of art
+        
+- title: Activities
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Co-founder
+      institution:     Geek Islands ORG, Athens, Greece
+      year: 2016-2017
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        -  Organized computer science introductory courses for young students in the remote island of Thassos, Greece.
+    - title: Team member
+      institution: Code it like a girl, Athens, Greece
+      year: 2016-2016
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+        - Code it Like a Girl aimed to teach girls and women from Greece in order to reduce the gender gap in the field of technology.
 
 - title: Open Source Projects
   type: time_table
@@ -70,27 +56,15 @@
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2017
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        -         Angelopoulos Fellowship
+    - year: 2014
       items: 
-        - Max Planck Medal
+        -         Stavros Niarchos Foundation Scholarship
 
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - Web design, Web development, Thrifting, Sewing
