--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Effrosynii
+first_name: Effrosyni
 middle_name: 
 last_name: Papanastasiou
 email: you@example.com
