--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -49,10 +49,10 @@
 - title: Open Source Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
+    - title: <a href="https://github.com/effrosyni-papanastasiou/constrained-em">constrained-em</a>
+      year: 2022
+      description: A feasible-graph inference algorithm.
+      
 - title: Honors and Awards
   type: time_table
   contents:
