--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,9 @@ first_name: Effrosyni
 middle_name: 
 last_name: Papanastasiou
 email: you@example.com
-description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
-footer_text: >
-keywords: effrosyni, papanastasiou  # add your own keywords or leave empty
+description: 
+footer_text: 
+keywords:  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
