--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Effrosyni
 middle_name: 
 last_name: Papanastasiou
-email: you@example.com
+email: effrosyni-papanastasiou@etu.sorbonne-universite.fr
 description: > 
 footer_text: >
 keywords: effrosyni, effrosyni-papanastasiou  # add your own keywords or leave empty
